--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@
     color: black;
     display: block;
     transition: 0.3s;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   
   .sidenav a:hover {
